--- a/Project3.ipynb
+++ b/Project3.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,7 @@
     "from nltk import classify\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import math\n",
     "\n",
     "from itertools import repeat\n",
     "\n",
@@ -1575,11 +1576,263 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Maximum Entropy Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll use Maximum Entropy Classification to try and get the genders as well.Unlike the Naive Bayes classifier that was used before, this classifier does not assume that the features are conditionally independent of each other. As it's name states, the Maximum Entropy classifier looks at the models that fit our training datasets with the one which has the largest entropy.\n",
+    "\n",
+    "Let's calculate the entropy of the labels in our dataset. The higher the entropy -means more noise in the dataset.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.951030970454714\n"
+     ]
+    }
+   ],
+   "source": [
+    "def entropy(labels):    \n",
+    "    freqdist = nltk.FreqDist(labels)    \n",
+    "    probs = [freqdist.freq(l) for l in nltk.FreqDist(labels)]    \n",
+    "    return -sum([p * math.log(p,2) for p in probs])\n",
+    "\n",
+    "print (entropy(gender))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  ==> Training (100 iterations)\n",
+      "\n",
+      "      Iteration    Log Likelihood    Accuracy\n",
+      "      ---------------------------------------\n",
+      "             1          -0.69315        0.370\n",
+      "             2          -0.34522        0.802\n",
+      "             3          -0.33500        0.802\n",
+      "             4          -0.32892        0.802\n",
+      "             5          -0.32489        0.802\n",
+      "             6          -0.32201        0.802\n",
+      "             7          -0.31987        0.802\n",
+      "             8          -0.31820        0.802\n",
+      "             9          -0.31687        0.802\n",
+      "            10          -0.31578        0.802\n",
+      "            11          -0.31487        0.802\n",
+      "            12          -0.31411        0.802\n",
+      "            13          -0.31345        0.802\n",
+      "            14          -0.31288        0.802\n",
+      "            15          -0.31238        0.802\n",
+      "            16          -0.31195        0.802\n",
+      "            17          -0.31156        0.802\n",
+      "            18          -0.31121        0.802\n",
+      "            19          -0.31089        0.802\n",
+      "            20          -0.31061        0.802\n",
+      "            21          -0.31035        0.802\n",
+      "            22          -0.31012        0.802\n",
+      "            23          -0.30990        0.802\n",
+      "            24          -0.30970        0.802\n",
+      "            25          -0.30952        0.802\n",
+      "            26          -0.30935        0.802\n",
+      "            27          -0.30919        0.802\n",
+      "            28          -0.30905        0.802\n",
+      "            29          -0.30891        0.802\n",
+      "            30          -0.30878        0.802\n",
+      "            31          -0.30866        0.802\n",
+      "            32          -0.30855        0.802\n",
+      "            33          -0.30845        0.802\n",
+      "            34          -0.30835        0.802\n",
+      "            35          -0.30825        0.802\n",
+      "            36          -0.30816        0.802\n",
+      "            37          -0.30808        0.802\n",
+      "            38          -0.30800        0.802\n",
+      "            39          -0.30792        0.802\n",
+      "            40          -0.30785        0.802\n",
+      "            41          -0.30778        0.802\n",
+      "            42          -0.30771        0.802\n",
+      "            43          -0.30765        0.802\n",
+      "            44          -0.30759        0.802\n",
+      "            45          -0.30753        0.802\n",
+      "            46          -0.30748        0.802\n",
+      "            47          -0.30743        0.802\n",
+      "            48          -0.30738        0.802\n",
+      "            49          -0.30733        0.802\n",
+      "            50          -0.30728        0.802\n",
+      "            51          -0.30724        0.802\n",
+      "            52          -0.30719        0.802\n",
+      "            53          -0.30715        0.802\n",
+      "            54          -0.30711        0.802\n",
+      "            55          -0.30707        0.802\n",
+      "            56          -0.30704        0.802\n",
+      "            57          -0.30700        0.802\n",
+      "            58          -0.30697        0.802\n",
+      "            59          -0.30693        0.802\n",
+      "            60          -0.30690        0.802\n",
+      "            61          -0.30687        0.802\n",
+      "            62          -0.30684        0.802\n",
+      "            63          -0.30681        0.802\n",
+      "            64          -0.30678        0.802\n",
+      "            65          -0.30675        0.802\n",
+      "            66          -0.30673        0.802\n",
+      "            67          -0.30670        0.802\n",
+      "            68          -0.30668        0.802\n",
+      "            69          -0.30665        0.802\n",
+      "            70          -0.30663        0.802\n",
+      "            71          -0.30660        0.802\n",
+      "            72          -0.30658        0.802\n",
+      "            73          -0.30656        0.802\n",
+      "            74          -0.30654        0.802\n",
+      "            75          -0.30652        0.802\n",
+      "            76          -0.30650        0.802\n",
+      "            77          -0.30648        0.802\n",
+      "            78          -0.30646        0.802\n",
+      "            79          -0.30644        0.802\n",
+      "            80          -0.30642        0.802\n",
+      "            81          -0.30640        0.802\n",
+      "            82          -0.30639        0.802\n",
+      "            83          -0.30637        0.802\n",
+      "            84          -0.30635        0.802\n",
+      "            85          -0.30634        0.802\n",
+      "            86          -0.30632        0.802\n",
+      "            87          -0.30630        0.802\n",
+      "            88          -0.30629        0.802\n",
+      "            89          -0.30627        0.802\n",
+      "            90          -0.30626        0.802\n",
+      "            91          -0.30625        0.802\n",
+      "            92          -0.30623        0.802\n",
+      "            93          -0.30622        0.802\n",
+      "            94          -0.30620        0.802\n",
+      "            95          -0.30619        0.802\n",
+      "            96          -0.30618        0.802\n",
+      "            97          -0.30617        0.802\n",
+      "            98          -0.30615        0.802\n",
+      "            99          -0.30614        0.802\n",
+      "         Final          -0.30613        0.802\n",
+      "Feature set 2 - MAX Entropy - Development set accuracy 0.782\n",
+      "Feature set 2 - MAX Entropy - Test set accuracy 0.798\n"
+     ]
+    }
+   ],
+   "source": [
+    "# shuffle the dev_set_names to get a new split\n",
+    "random.seed(25)\n",
+    "random.shuffle(dev_set_names)\n",
+    "\n",
+    "\n",
+    "train_set = [(gender_features2(n), g) for (n,g) in train_names]\n",
+    "devtest_set = [(gender_features2(n), g) for (n,g) in dev_set_names]\n",
+    "test_set2 = [(gender_features2(n), g) for (n,g) in test_names]\n",
+    "\n",
+    "\n",
+    "\n",
+    "maxentclassifier2 = nltk.classify.MaxentClassifier.train(train_set)\n",
+    "\n",
+    "#Let's see the accuarcy of our classifer accuracy on validation set\n",
+    "print (\"Feature set 2 - MAX Entropy - Development set accuracy \" + str(nltk.classify.accuracy(maxentclassifier2, devtest_set)))\n",
+    "\n",
+    "#Let's see the accuarcy of our classifer accuracy on test set\n",
+    "print (\"Feature set 2 - MAX Entropy - Test set accuracy \" + str(nltk.classify.accuracy(maxentclassifier2, test_set2)))\n",
+    "\n",
+    " \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   6.644 ck=='ck' and label is 'male'\n",
+      "   6.644 co=='co' and label is 'male'\n",
+      "   6.644 rs=='rs' and label is 'male'\n",
+      "   6.644 ez=='ez' and label is 'male'\n",
+      "   6.644 ft=='ft' and label is 'male'\n",
+      "   6.644 yd=='yd' and label is 'male'\n",
+      "   6.644 ov=='ov' and label is 'male'\n",
+      "   6.644 eu=='eu' and label is 'male'\n",
+      "   6.644 tz=='tz' and label is 'male'\n",
+      "   6.644 ug=='ug' and label is 'male'\n",
+      "   6.644 rv=='rv' and label is 'male'\n",
+      "   6.644 op=='op' and label is 'male'\n",
+      "   6.644 nz=='nz' and label is 'male'\n",
+      "   6.644 hu=='hu' and label is 'male'\n",
+      "   6.644 oo=='oo' and label is 'female'\n",
+      "   6.644 ak=='ak' and label is 'male'\n",
+      "   6.644 tr=='tr' and label is 'male'\n",
+      "   6.644 av=='av' and label is 'male'\n",
+      "   6.644 ln=='ln' and label is 'male'\n",
+      "   6.644 if=='if' and label is 'male'\n",
+      "   6.644 mb=='mb' and label is 'female'\n",
+      "   6.644 eb=='eb' and label is 'male'\n",
+      "   6.644 gs=='gs' and label is 'male'\n",
+      "   6.644 ef=='ef' and label is 'male'\n",
+      "   6.644 ht=='ht' and label is 'male'\n",
+      "   6.644 ks=='ks' and label is 'male'\n",
+      "   6.644 ms=='ms' and label is 'male'\n",
+      "   6.644 rc=='rc' and label is 'male'\n",
+      "   6.644 ac=='ac' and label is 'male'\n",
+      "   6.644 rj=='rj' and label is 'female'\n",
+      "   6.644 iy=='iy' and label is 'female'\n",
+      "   6.644 ls=='ls' and label is 'male'\n",
+      "   6.644 uc=='uc' and label is 'male'\n",
+      "   6.644 ux=='ux' and label is 'female'\n",
+      "   6.644 ct=='ct' and label is 'male'\n",
+      "   6.644 ec=='ec' and label is 'male'\n",
+      "   6.644 zi=='zi' and label is 'female'\n",
+      "   6.644 ib=='ib' and label is 'female'\n",
+      "   6.644 oz=='oz' and label is 'female'\n",
+      "   6.644 az=='az' and label is 'male'\n",
+      "   6.644 ho=='ho' and label is 'male'\n",
+      "   6.644 xi=='xi' and label is 'female'\n",
+      "   6.644 fo=='fo' and label is 'male'\n",
+      "   6.644 aw=='aw' and label is 'male'\n",
+      "   6.644 ut=='ut' and label is 'male'\n",
+      "   6.644 nk=='nk' and label is 'male'\n",
+      "   6.644 gt=='gt' and label is 'male'\n",
+      "   6.644 ym=='ym' and label is 'female'\n",
+      "   6.644 ze=='ze' and label is 'female'\n",
+      "   6.644 ub=='ub' and label is 'male'\n"
+     ]
+    }
+   ],
+   "source": [
+    "#We can now see what our model thinks are the most informative features.\n",
+    "maxentclassifier2.show_most_informative_features(50)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Conclusions\n",
-    "Based on above it looks like the last two letter model performs better than other models and the accuracy of test set is better than devtest for this one.For others features there looks like a bit of overfitting.\n",
+    "We can see that our Max Entropy classifier uses an iterative method to maximize the performance of the training corpus classification. In this case the default number of iteration was 100, which is reasonable for our dataset. This is why it takes a long time to train a huge dataset and could also explain why it is not as popular.Advantage is that the classifier does not require a vast amount of data like decision trees as long as the dataset has a high entropy.\n",
+    "\n",
+    "Based on above it looks like the last two letter model for Max Entropy performs slightly better than Naives model and the accuracy of test set is better than devtest for this one.For others features for naive model(since we didn't perform max entropy on other features) there looks like a bit of overfitting.\n",
+    "\n",
     "Results showed that the features we have selected for prediction are correctly able to predict gender in the range of  ~75 percent to ~79 percent of the time on the nltk names corpus ."
    ]
   }
